[package]
name = "vusb"
version = "0.1.0"
edition = "2024"

[dependencies]
getopts = "0.2.24"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.0.6"
wincode = { version = "0.4.7", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
inotify = "0.11.1"
nix = { version = "0.31.2", features = ["poll"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi"] }

